--- a/templates/index.html
+++ b/templates/index.html
@@ -29,5 +29,9 @@
 
     {% endfor %}
 
+    <form action="/cadastro" >
+        <button  id="cadastrar">Cadastrar Novo </button>
+    </form>
+
 </body>
 </html>
